<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/layout_header"
        android:background="@drawable/shape">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:id="@+id/title"
            android:textSize="35dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:text="Se connecter"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:id="@+id/title_small"
            android:textSize="10dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-thin"
            android:text="Votre sécurité est notre priorité"
            android:layout_centerHorizontal="true"
            android:textColor="@color/orange"
            />

        <TextView
            android:id="@+id/alert"
            android:layout_width="500dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="132dp"
            android:background="@drawable/alert"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="invisible" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textDirection="firstStrong">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="330dp"
            android:layout_marginTop="30dp"
            android:layout_height="60dp"
            android:gravity="bottom"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:clipToPadding="false"
            android:textColorHint="@color/blue"
            android:textCursorDrawable="@drawable/cursor"
            app:hintTextColor="@color/blue_light">
            <EditText
                android:id="@+id/identifiant"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:textCursorDrawable="@color/blue"
                android:paddingTop="23dp"
                android:ems="9"
                android:textColor="@color/blue_light"
                android:singleLine="true"
                android:drawablePadding="10dp"
                android:hint="@string/label_login"
                android:drawableRight="@drawable/email"
                android:textColorHint="@color/blue"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="text"
                android:textStyle="bold"
                android:textSize="13sp"
                android:background="@drawable/custom_input" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="330dp"
            android:layout_marginTop="100dp"
            android:layout_height="60dp"
            android:gravity="bottom"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:clipToPadding="false"
            android:textColorHint="@color/blue"
            android:textCursorDrawable="@drawable/cursor"
            app:hintTextColor="@color/blue_light">
            <EditText
                android:id="@+id/pwd"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:textCursorDrawable="@color/blue"
                android:paddingTop="23dp"
                android:ems="9"
                android:textColor="@color/blue_light"
                android:singleLine="true"
                android:drawablePadding="10dp"
                android:hint="@string/label_pwd"
                android:textColorHint="@color/blue"
                android:drawableRight="@drawable/key"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="textPassword"
                android:textStyle="bold"
                android:textSize="13sp"
                android:background="@drawable/custom_input" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox android:id="@+id/checkbox_meat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:textColor="@color/blue_light"
            android:layout_marginLeft="30dp"
            android:textSize="13sp"
            android:theme="@style/checkBoxStyle"
            android:layout_marginTop="190dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="42dp"
            android:textSize="13sp"
            android:layout_marginTop="195dp"
            android:text="@string/mdpoublie"
            android:layout_centerHorizontal="true"
            android:textColor="@color/blue_light" />

        <Button
            android:id="@+id/connection"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_button"
            android:layout_marginTop="250dp"
            android:text="@string/connection"
            android:onClick="signIn"
            />

        <TextView
            android:id="@+id/orChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="ou s'inscrire"
            android:textStyle="bold"
            android:textSize="13sp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/blue"/>

        <View
            android:layout_width="115dp"
            android:layout_height="1dp"
            android:layout_marginTop="360dp"
            android:layout_marginLeft="16dp"
            android:layout_toLeftOf="@id/orChoice"
            android:background="@color/shadow"
            />

        <View
            android:layout_width="115dp"
            android:layout_height="1dp"
            android:layout_marginTop="360dp"
            android:layout_toRightOf="@id/orChoice"
            android:background="@color/shadow"
            />
        
        <Button
            android:id="@+id/sign_up"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:textColor="@color/blue"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_button_sign_in"
            android:layout_marginTop="390dp"
            android:text="@string/sinscrire" />


    </RelativeLayout>


</LinearLayout>